Document fields with "make update"
We used:
- https://logi.cc/en/2010/07/netfilter-log-format/
- http://shorewall.net

--- a/x-pack/filebeat/module/shorewall/_meta/fields.yml
+++ b/x-pack/filebeat/module/shorewall/_meta/fields.yml
@@ -15,8 +15,12 @@
           fields:
             - name: in
               type: keywork
+              description: >
+                Name of the input network interface
             - name: out
               type: keyword
+              description: >
+                Name of the output network interface
         - name: action
           type: group
           description: >
@@ -25,24 +29,49 @@
             - name: one
               type: keywork
               description: >
-                Action one
+                Specifies the action to be taken if the connection request matches
+                the rule. target must be one of the following values (ACCEPT, ACCEPT+,
+                ACCEPT!, ADD, AUDIT, A_ACCEPT, A_ACCEPT+, A_ACCEPT!, A_DROP, A_DROP!,
+                A_REJECT, A_REJECT!, ?COMMENT, CONMARK, CONTINUE, CONTINUE!, COUNT, DEL,
+                DNAT, DNAT-, DROP, DROP!, HELPER, INLINE, IPTABLES, IP6TABLES, LOG, MACRO,
+                MARK, NFLOG, NFQUEUE, NONAT, QUEUE, QUEUE!, REJECT, REJECT!, REDIRECT,
+                REDIRECT-, TARPIT, ULOG. See http://shorewall.net/manpages/shorewall-rules.html
             - name: two
               type: keyword
               description: >
                 Action two
         - name: frame_type
           type: keyword
+          description: >
+            This field is part of the MAC address in the log. It indicates whether
+            the ethernet frame carried an IPv4 datagram or not.
         - name: precedence
           type: keyword
+          description: >
+            Type Of Service, and it's increasingly being replaced by DS and ECN.
         - name: res
           type: keyword
+          description: >
+            Reserved bits. The ECN flags "CWR" and "ECNE" will show up in the two
+            least significant bits of this field.
         - name: time1
           type: integer
         - name: time2
           type: integer
         - name: ttl
           type: integer
+          description: >
+            The remaining Time To Live.
         - name: urgp
           type: integer
+          description: >
+            The Urgent Pointer allows for urgent, "out of band" data transfer.
+            Unfortunately not all protocol implementations agree, so this facility
+            is hardly ever used.
         - name: window
           type: integer
+          description: >
+            The TCP Receive Window size. This may be scaled by bit-shifting left
+            by a number of bits specified in the "Window Scale" TCP option.
+            If the host supports ECN, then the TCP Receive Window size will also
+            be controlled by that.
