Various improvements to perfmon
- Used the [PdhExpandWildCardPathW](https://docs.microsoft.com/en-us/windows/desktop/api/pdh/nf-pdh-pdhexpandwildcardpathw) func to retrieve all counter paths. Will fix https://github.com/elastic/beats/issues/10660
- Small refactoring in order to separate methods by responsability (will be usefull for the iis module as well)
- Added `perfmon.append_instance_counter: true` config option in order to retrieve the full instance name (with counter)

--- a/metricbeat/module/windows/perfmon/_meta/fields.yml
+++ b/metricbeat/module/windows/perfmon/_meta/fields.yml
@@ -1,1 +1,15 @@
-- release: beta
+- name: processor
+  type: group
+  description: >
+    `processor` contains the performance counter values.
+  release: beta
+  fields:
+  - name: id
+    type: keyword
+    description: >
+      A unique ID for the process.
+  - name: name
+    type: keyword
+    description: >
+      The process name.
+
