--- a/x-pack/filebeat/module/panw/_meta/config.yml
+++ b/x-pack/filebeat/module/panw/_meta/config.yml
@@ -1,7 +1,4 @@
-# Module: palo_alto
-# Docs: https://www.elastic.co/guide/en/beats/filebeat/master/filebeat-module-palo_alto.html
-
-- module: palo_alto
+- module: panw
   pan_os:
     enabled: true
 
