--- a/x-pack/filebeat/module/panw/_meta/fields.yml
+++ b/x-pack/filebeat/module/panw/_meta/fields.yml
@@ -1,10 +1,10 @@
-- key: palo_alto
-  title: palo_alto
+- key: panw
+  title: panw
   description: >
     Module for Palo Alto Networks (PAN-OS)
   fields:
-    - name: palo_alto
+    - name: panw
       type: group
       description: >
-        Fields from the palo_alto logs.
+        Fields from the panw module.
       fields:
