--- a/x-pack/filebeat/module/panw/pan_os/ingest/pipeline.yml
+++ b/x-pack/filebeat/module/panw/pan_os/ingest/pipeline.yml
@@ -1,4 +1,4 @@
-description: "Pipeline for Palo Alto PAN-OS Logs"
+description: "Pipeline for Palo Alto Networks PAN-OS Logs"
 processors:
 
 # keep message as log.original.
@@ -55,15 +55,15 @@ processors:
  - convert: { type: long, ignore_missing: true, field: network.packets }
  - convert: { type: long, ignore_missing: true, field: event.duration }
  - convert: { type: long, ignore_missing: true, field: _temp_.labels }
- - convert: { type: long, ignore_missing: true, field: palo_alto.pan_os.sequence_number }
- - convert: { type: long, ignore_missing: true, field: palo_alto.pan_os.source.nat.port }
- - convert: { type: long, ignore_missing: true, field: palo_alto.pan_os.destination.nat.port }
+ - convert: { type: long, ignore_missing: true, field: panw.pan_os.sequence_number }
+ - convert: { type: long, ignore_missing: true, field: panw.pan_os.source.nat.port }
+ - convert: { type: long, ignore_missing: true, field: panw.pan_os.destination.nat.port }
 
 # Remove PCAP ID when zero (no packet capture).
  - remove:
-     if: 'ctx?.palo_alto?.pan_os?.network?.pcap_id == "0"'
+     if: 'ctx?.panw?.pan_os?.network?.pcap_id == "0"'
      field:
-       - palo_alto.pan_os.network.pcap_id
+       - panw.pan_os.network.pcap_id
 
 # Extract 'flags' bitfield into labels.
  - script:
@@ -112,23 +112,23 @@ processors:
  - set:
      field: network.direction
      value: inbound
-     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.palo_alto?.pan_os?.source?.zone == "untrust" && ctx?.palo_alto?.pan_os?.destination?.zone == "trust"'
+     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.panw?.pan_os?.source?.zone == "untrust" && ctx?.panw?.pan_os?.destination?.zone == "trust"'
  - set:
      field: network.direction
      value: outbound
-     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.palo_alto?.pan_os?.source?.zone == "trust" && ctx?.palo_alto?.pan_os?.destination?.zone == "untrust"'
+     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.panw?.pan_os?.source?.zone == "trust" && ctx?.panw?.pan_os?.destination?.zone == "untrust"'
  - set:
      field: network.direction
      value: internal
-     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.palo_alto?.pan_os?.source?.zone == "trust" && ctx?.palo_alto?.pan_os?.destination?.zone == "trust"'
+     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.panw?.pan_os?.source?.zone == "trust" && ctx?.panw?.pan_os?.destination?.zone == "trust"'
  - set:
      field: network.direction
      value: external
-     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.palo_alto?.pan_os?.source?.zone == "untrust" && ctx?.palo_alto?.pan_os?.destination?.zone == "untrust"'
+     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ctx?.panw?.pan_os?.source?.zone == "untrust" && ctx?.panw?.pan_os?.destination?.zone == "untrust"'
  - set:
      field: network.direction
      value: unknown
-     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ((ctx?.palo_alto?.pan_os?.source?.zone != "trust" && ctx?.palo_alto?.pan_os?.source?.zone != "untrust") || (ctx?.palo_alto?.pan_os?.destination?.zone != "trust" && ctx?.palo_alto?.pan_os?.destination?.zone != "untrust"))'
+     if: 'ctx?._temp_?.message_type == "TRAFFIC" && ((ctx?.panw?.pan_os?.source?.zone != "trust" && ctx?.panw?.pan_os?.source?.zone != "untrust") || (ctx?.panw?.pan_os?.destination?.zone != "trust" && ctx?.panw?.pan_os?.destination?.zone != "untrust"))'
 
 # Set network.direction from threat direction (Threat logs).
  - set:
@@ -287,15 +287,15 @@ processors:
      value:
        - '{{destination.ip}}'
  - append:
-     if: 'ctx?.palo_alto?.pan_os?.source?.nat?.ip != null'
+     if: 'ctx?.panw?.pan_os?.source?.nat?.ip != null'
      field: related.ip
      value:
-       - '{{palo_alto.pan_os.source.nat.ip}}'
+       - '{{panw.pan_os.source.nat.ip}}'
  - append:
-     if: 'ctx?.palo_alto?.pan_os?.destination?.nat?.ip != null'
+     if: 'ctx?.panw?.pan_os?.destination?.nat?.ip != null'
      field: related.ip
      value:
-       - '{{palo_alto.pan_os.destination.nat.ip}}'
+       - '{{panw.pan_os.destination.nat.ip}}'
 
 # Geolocation for source.
  - geoip:
@@ -311,22 +311,22 @@ processors:
 
 # Append NAT community_id to network.community_id
  - append:
-     if: 'ctx?.palo_alto?.pan_os?.network?.nat?.community_id != null && ctx.palo_alto.pan_os.network.nat.community_id != ctx?.network?.community_id'
+     if: 'ctx?.panw?.pan_os?.network?.nat?.community_id != null && ctx.panw.pan_os.network.nat.community_id != ctx?.network?.community_id'
      field: network.community_id
      value:
-      - '{{palo_alto.pan_os.network.nat.community_id}}'
+      - '{{panw.pan_os.network.nat.community_id}}'
 
  - grok:
-     if: 'ctx?.palo_alto?.pan_os?.threat?.name != null'
-     field: palo_alto.pan_os.threat.name
+     if: 'ctx?.panw?.pan_os?.threat?.name != null'
+     field: panw.pan_os.threat.name
      ignore_failure: true
      patterns:
-       - '%{GREEDYDATA:palo_alto.pan_os.threat.name}\(\s*%{GREEDYDATA:palo_alto.pan_os.threat.id}\s*\)'
+       - '%{GREEDYDATA:panw.pan_os.threat.name}\(\s*%{GREEDYDATA:panw.pan_os.threat.id}\s*\)'
 
  - set:
-     field: palo_alto.pan_os.threat.name
+     field: panw.pan_os.threat.name
      value: 'URL-filtering'
-     if: 'ctx?.palo_alto?.pan_os?.threat?.id == "9999"'
+     if: 'ctx?.panw?.pan_os?.threat?.id == "9999"'
 
 # Remove temporary fields.
  - remove:
