move private working set to a new map

--- a/metricbeat/module/docker/memory/_meta/fields.yml
+++ b/metricbeat/module/docker/memory/_meta/fields.yml
@@ -4,10 +4,10 @@
     Memory metrics.
   release: ga
   fields:
-    - name: private_working_set
+    - name: private_working_set.total
       type: long
       description: >
-        private working sets
+        private working sets on Windows
     - name: fail.count
       type: scaled_float
       description: >
