--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -405,7 +405,7 @@ filebeat.modules:
 
 #--------------------------------- Panw Module ---------------------------------
 - module: panw
-  pan_os:
+  panos:
     enabled: true
 
     # Set which input to use between syslog (default) or file.
