Rename palo_alto module to panw (#12269)
Use of the original module name, palo_alto, is discouraged. The
preferred short form is PANW (acronym for Palo Alto Networks).

This patch renames the module and updates all that is necessary,
including docs and field names, which now are nested under `panw`
instead of `palo_alto`.

The fileset is also renamed, from `pan_os` to `panos`.

--- a/x-pack/filebeat/filebeat.reference.yml
+++ b/x-pack/filebeat/filebeat.reference.yml
@@ -403,9 +403,9 @@ filebeat.modules:
     # of the document. The default is true.
     #var.use_namespace: true
 
-#------------------------------ Palo_alto Module ------------------------------
-- module: palo_alto
-  pan_os:
+#--------------------------------- Panw Module ---------------------------------
+- module: panw
+  panos:
     enabled: true
 
     # Set which input to use between syslog (default) or file.
