--- a/x-pack/filebeat/module/panw/_meta/config.yml
+++ b/x-pack/filebeat/module/panw/_meta/config.yml
@@ -1,5 +1,5 @@
-- module: palo_alto
-  pan_os:
+- module: panw
+  panos:
     enabled: true
 
     # Set which input to use between syslog (default) or file.
