--- a/x-pack/filebeat/module/panw/_meta/config.yml
+++ b/x-pack/filebeat/module/panw/_meta/config.yml
@@ -1,8 +1,5 @@
-# Module: palo_alto
-# Docs: https://www.elastic.co/guide/en/beats/filebeat/7.2/filebeat-module-palo_alto.html
-
-- module: palo_alto
-  pan_os:
+- module: panw
+  panos:
     enabled: true
 
     # Set which input to use between syslog (default) or file.
