--- a/metricbeat/metricbeat.reference.yml
+++ b/metricbeat/metricbeat.reference.yml
@@ -458,6 +458,14 @@ metricbeat.modules:
     - apiserver
   hosts: ["https://${KUBERNETES_SERVICE_HOST}:${KUBERNETES_SERVICE_PORT}"]
 
+# Kubernetes proxy server
+- module: kubernetes
+  enabled: true
+  metricsets:
+    - kubeproxy
+  hosts: ["localhost:10249"]
+  period: 10s
+
 #--------------------------------- kvm Module --------------------------------
 - module: kvm
   metricsets: ["dommemstat"]
