--- a/metricbeat/module/kubernetes/kubeproxy/_meta/fields.yml
+++ b/metricbeat/module/kubernetes/kubeproxy/_meta/fields.yml
@@ -2,34 +2,33 @@
   type: group
   description: >
     Kubernetes proxy server metrics
-  release: beta
+  release: ga
   fields:
 
-    - name: client
-      type: group
+    - name: status_code
+      type: keyword
       description: >
-        kubeproxy HTTP client labels
-      fields:
-        - name: request.status_code
-          type: keyword
-          description: >
-            HTTP Code returned to kubeproxy
-        - name: request.host
-          type: keyword
-          description: >
-            Host addressing the request from kubeproxy
-        - name: request.method
-          type: keyword
-          description: >
-            HTTP method issued from kubeproxy (used at client.request.count)
-        - name: request.verb
-          type: keyword
-          description: >
-            HTTP method issued from kubeproxy (used at sync.rules.latency.us)
-        - name: request.url
-          type: keyword
-          description: >
-            URL requested from kubeproxy
+        HTTP Code
+    - name: host
+      type: keyword
+      description: >
+        Host address
+    - name: method
+      type: keyword
+      description: >
+        HTTP method
+    - name: verb
+      type: keyword
+      description: >
+        HTTP method
+    - name: url
+      type: keyword
+      description: >
+        URL requested
+    - name: handler
+      type: keyword
+      description: >
+        HTTP request handler
 
     - name: process
       type: group
@@ -49,47 +48,68 @@
           description: >
             Resident memory size in bytes
 
+    - name: http
+      type: group
+      description: >
+        HTTP server metrics
+      fields:
+        - name: request.duration.us
+          type: float
+          description: >
+            HTTP request duration
+        - name: request.size.bytes
+          type: long
+          description: >
+            HTTP request size
+        - name: response.size.bytes
+          type: long
+          description: >
+            HTTP response size
+        - name: request.count
+          type: long
+          description: >
+            Number of HTTP requests
+
     - name: client
       type: group
       description: >
         kubeproxy REST client metrics
       fields:
-        - name: request.latency.us.sum
+        - name: request.duration.us.sum
           type: long
           description: >
-            Requests latency, sum of latencies in microseconds
-        - name: request.latency.us.count
+            Requests duration, sum of durations in microseconds
+        - name: request.duration.us.count
           type: long
           description: >
-            Request latency, number of requests
-        - name: request.latency.us.bucket.*
+            Request duration, number of requests
+        - name: request.duration.us.bucket.*
           type: object
           object_type: long
           description: >
-            Request latency, histogram buckets
-            
+            Request duration, histogram buckets
         - name: request.count
           type: long
           description: >
-            Number of HTTP requests, partitioned by status code, method, and host
+            Number of Rest requests, broken down by URL and verb
 
     - name: sync
       type: group
       description: >
         kubeproxy proxy rules metrics
       fields:
-        - name: rules.latency.us.sum
+        - name: rules.duration.us.sum
           type: long
           description: >
-            SyncProxyRules latency, sum of latencies in microseconds
-        - name: rules.latency.us.count
+            SyncProxyRules duration, sum of durations in microseconds
+        - name: rules.duration.us.count
           type: long
           description: >
-            SyncProxyRules latency, number of operations
-        - name: rules.latency.us.bucket.*
+            SyncProxyRules duration, number of operations
+        - name: rules.duration.us.bucket.*
           type: object
           object_type: long
           description: >
-            SyncProxyRules latency, histogram buckets
+            SyncProxyRules duration, histogram buckets
 
 
