Enable Simple ACL authorizer

--- a/metricbeat/module/kafka/_meta/kafka_server_jaas.conf
+++ b/metricbeat/module/kafka/_meta/kafka_server_jaas.conf
@@ -3,5 +3,6 @@ KafkaServer {
    username="admin"
    password="admin-secret"
    user_admin="admin-secret"
+   user_producer="producer-secret"
    user_stats="test-secret";
 };
