--- a/metricbeat/module/kafka/_meta/kafka_server_jaas.conf
+++ b/metricbeat/module/kafka/_meta/kafka_server_jaas.conf
@@ -4,5 +4,6 @@ KafkaServer {
    password="admin-secret"
    user_admin="admin-secret"
    user_producer="producer-secret"
+   user_consumer="consumer-secret"
    user_stats="test-secret";
 };
