--- a/metricbeat/module/system/entropy/_meta/fields.yml
+++ b/metricbeat/module/system/entropy/_meta/fields.yml
@@ -4,7 +4,7 @@
     entropy
   fields:
     - name: entropy
-      type: object
+      type: group
       description: >
         Available system entropy
       fields:
