--- a/metricbeat/module/system/entropy/_meta/fields.yml
+++ b/metricbeat/module/system/entropy/_meta/fields.yml
@@ -14,6 +14,6 @@
             The available bits of entropy
         - name: pct
           type: scaled_float
-          type: percentage
+          format: percentage
           description: >
             The percentage of available entropy, relative to the pool size of 4096
