--- a/metricbeat/module/system/entropy/_meta/fields.yml
+++ b/metricbeat/module/system/entropy/_meta/fields.yml
@@ -1,19 +1,15 @@
 - name: entropy
   type: group
   description: >
-    entropy
+    Available system entropy
+  release: ga
   fields:
-    - name: entropy
-      type: group
+    - name: available_bits
+      type: long
       description: >
-        Available system entropy
-      fields:
-        - name: available_bits
-          type: long
-          description: >
-            The available bits of entropy
-        - name: pct
-          type: scaled_float
-          format: percentage
-          description: >
-            The percentage of available entropy, relative to the pool size of 4096
+        The available bits of entropy
+    - name: pct
+      type: scaled_float
+      format: percent
+      description: >
+        The percentage of available entropy, relative to the pool size of 4096
